--- a/src/styles/components/_collaps.scss
+++ b/src/styles/components/_collaps.scss
@@ -49,5 +49,54 @@
         font-size: 1.4rem;
       }
     }
+
+    .collapsibleContent {
+      img {
+        align-self: center;
+        border-radius: 10px;
+        width: 100%;
+      }
+
+      pre {
+        margin-top: 30px;
+        align-self: center;
+        width: 100%;
+
+        @media (max-width: 600px) {
+          font-size: 0.8rem;
+        }
+      }
+
+      iframe {
+        align-self: center;
+        border-radius: 10px;
+        margin-top: 30px;
+
+        @media (max-width: 600px) {
+          font-size: 0.7rem;
+          width: 90%;
+          height: 200px;
+        }
+      }
+
+      video {
+        width: 80%;
+        align-self: center;
+        margin-top: 30px;
+      }
+
+      .contentNote {
+        padding-top: 5px;
+        opacity: 0.6;
+        width: 60%;
+        align-self: center;
+
+        @media (max-width: 600px) {
+          width: 90%;
+          text-align: left;
+          margin: 0 auto;
+        }
+      }
+    }
   }
 }
