--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -47,19 +47,31 @@
       p {
         @include text-font();
         font-size: 1.1rem;
-        padding-bottom: 20px;
+        padding-bottom: 0px;
         padding-left: 50px;
         padding-right: 50px;
 
         text-align: center;
       }
     }
+
     .mainProjectContent {
       display: flex;
       flex-direction: column;
       justify-content: center;
       width: 100%;
       align-self: center;
+
+      .imageContainer {
+        display: flex;
+        justify-content: space-around;
+        width: 80%;
+        align-self: center;
+
+        img {
+          width: 40%;
+        }
+      }
 
       img {
         align-self: center;
