--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -41,7 +41,7 @@
 
         @media (max-width: 778px) {
           text-align: center;
-          font-size: 2rem;
+          font-size: 2.5rem;
         }
       }
       p {
@@ -52,6 +52,10 @@
         padding-right: 50px;
 
         text-align: center;
+
+        @media (max-width: 778px) {
+          font-size: 1rem;
+        }
       }
     }
 
@@ -111,6 +115,10 @@
         width: 40%;
         align-self: center;
         margin-top: 30px;
+
+        @media (max-width: 778px) {
+          width: 60%;
+        }
       }
 
       .contentNote {
