--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -61,13 +61,12 @@
     filter: var(--logo-filter);
     display: flex;
     border-radius: 20px;
-    padding: 20px;
     border: 2px solid var(--project-border);
 
     margin-top: 80px;
 
     width: 80%;
-    height: 280px;
+    height: 250px;
 
     background-size: cover;
     background-position: center;
@@ -82,42 +81,32 @@
 
     @media (max-width: 778px) {
       flex-direction: column;
+      height: 100%;
+      margin-top: 80px;
     }
 
     .projectLeftSection {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
+
       width: 100%;
       height: 100%;
 
       @media (max-width: 778px) {
       }
 
-      h4 {
-        @include subtitles-font();
-        font-size: 1.1rem;
-        opacity: 50%;
-        line-height: 0.5rem;
-        padding-left: 5px;
-
-        @media (max-width: 778px) {
-          text-align: center;
-          padding-left: 0;
-        }
-      }
-
       h2 {
         @include titles-font();
-        font-size: 4.6rem;
-        line-height: 98%;
+        font-size: 4rem;
         text-align: center;
         color: white;
 
         margin-top: 35px;
 
         @media (max-width: 778px) {
-          font-size: 2.5rem;
+          font-size: 2.2rem;
         }
       }
 
@@ -136,12 +125,13 @@
           border-radius: 15px;
 
           position: relative;
-          top: -10px;
+          top: -30px;
           color: white;
           font-weight: 500;
 
           @media (max-width: 778px) {
             font-size: 1rem;
+            top: -20px;
           }
         }
       }
