added Image Component + lazy loading

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -111,6 +111,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-decoration: none;
+  transition: opacity 0.2s ease;
 }
 .projectListContainer .projectContainer {
   filter: var(--logo-filter);
