--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -55,6 +55,8 @@
     flex-direction: column;
     align-items: center;
     text-decoration: none;
+
+    transition: opacity 0.2s ease;
   }
 
   .projectContainer {
